<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <EditText
        android:id="@+id/edtSong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edt1" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singer" />

    <EditText
        android:id="@+id/edtSinger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edt2" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year" />

    <EditText
        android:id="@+id/edtYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edt3" />

    <TextView
        android:id="@+id/test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/star" />

    <RadioGroup
        android:id="@+id/Rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdbt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rd1"
            android:checked="true"></RadioButton>
        <RadioButton
            android:id="@+id/rdbt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rd2"></RadioButton>
        <RadioButton
            android:id="@+id/rdbt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rd3"
            android:checked="true"></RadioButton>
        <RadioButton
            android:id="@+id/rdbt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rd4"></RadioButton>
        <RadioButton
            android:id="@+id/rdbt5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rd5"></RadioButton>



    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnINSERT"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/insert"></Button>
        <Button
            android:id="@+id/btnSHOW"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/showlist"></Button>
    </LinearLayout>

    <ListView
        android:id="@+id/Songlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>