<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image"
    android:orientation="vertical"
    tools:context=".Show_List">


    <Button
        android:id="@+id/btn5star"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn5star" />

    <Spinner
        android:id="@+id/spnyear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginLeft="50px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/title" />
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/singer" />
        <TextView
            android:layout_width="100dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/year" />
        <TextView
            android:layout_width="100dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/star" />
    </LinearLayout>

    <ListView
        android:layout_marginLeft="50px"
        android:layout_marginTop="50px"
        android:id="@+id/showallsong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />




</LinearLayout>