<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SONGedit">



    <TextView
        android:id="@+id/tvID1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ID" />
    <EditText
        android:id="@+id/editID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
         />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <EditText
        android:id="@+id/edit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singer" />

    <EditText
        android:id="@+id/edit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year" />

    <EditText
        android:id="@+id/edit3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <RadioGroup
        android:id="@+id/edtRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/edtrdbt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rd1"
            android:checked="true"></RadioButton>
        <RadioButton
            android:id="@+id/edtrdbt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rd2"></RadioButton>
        <RadioButton
            android:id="@+id/edtrdbt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rd3"
            android:checked="true"></RadioButton>
        <RadioButton
            android:id="@+id/edtrdbt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rd4"></RadioButton>
        <RadioButton
            android:id="@+id/edtrdbt5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rd5"></RadioButton>



    </RadioGroup>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/btnupdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update" />
    <Button
        android:id="@+id/btndelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete" />



</LinearLayout>
    <Button
        android:id="@+id/btncancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel" />

</LinearLayout>